agregue texto alternativo en img

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
         <header class="menu-header">
             <div class="container">
-                <img class="menu-icono" src="assets/impreso-en-3d.png">
-                <img class="menu-icono" src="assets/impreso-en-3d.png">
-                <img class="menu-icono" src="assets/impreso-en-3d.png">
+                <img class="menu-icono" src="assets/impreso-en-3d.png" alt="icon-impresora">
+                <img class="menu-icono" src="assets/impreso-en-3d.png" alt="icon-impresora">
+                <img class="menu-icono" src="assets/impreso-en-3d.png" alt="icon-impresora">
             </div>
             <div>
                 <h1 class="menu-titulo"> Impresioname </h1>
@@ -59,7 +59,7 @@
                         <div class="card-container--value">
                             <p>$${price}</p>
                             <button class="delete-button" data-id="${id}">
-                                <img class="borrar" src="assets/borrar.png" data-remove="true">
+                                <img class="borrar" src="assets/borrar.png" data-remove="true" alt="img-tachobasura">
                             </button>
                         </div>                      
                     </div>-->
@@ -71,9 +71,9 @@
             <div class="menu-footer">
                 <div class="container">
                     <div class="icons-and-title">
-                        <img class="menu-icono" src="assets/impreso-en-3d.png">
-                        <img class="menu-icono" src="assets/impreso-en-3d.png">
-                        <img class="menu-icono" src="assets/impreso-en-3d.png">
+                        <img class="menu-icono" src="assets/impreso-en-3d.png" alt="icon-impresora">
+                        <img class="menu-icono" src="assets/impreso-en-3d.png" alt="icon-impresora">
+                        <img class="menu-icono" src="assets/impreso-en-3d.png" alt="icon-impresora">
                         <h1 class="menu-titulo-footer"> Impresioname </h1>
                     </div>
                 </div>
